--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
     "express": "^4.17.1",
     "mongodb": "^3.6.8"
-  }
+  },
+  "name": "web-backend-rest",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "dev": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/arkflame/web-backend-rest.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/arkflame/web-backend-rest/issues"
+  },
+  "homepage": "https://github.com/arkflame/web-backend-rest#readme",
+  "description": ""
 }
