--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "name": "web-backend-rest",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.12"
+  },
   "scripts": {
     "dev": "echo \"Error: no test specified\" && exit 1"
   },
